--- a/src/dccboxed-receive/dccboxed-receive.html
+++ b/src/dccboxed-receive/dccboxed-receive.html
@@ -39,6 +39,41 @@
     <input id="node-input-output" type="text" style="width: 70%">
   </div>
 
+  <input id="node-input-outputs" type="hidden">
+
+  <div class="form-row">
+    <label><i class="fa fa-sign-in"></i> Response</label>
+    <input type="checkbox" id="node-input-outputResponses" style="display: inline-block; width: auto; vertical-align: top;" />
+    <label for="node-input-outputResponses" style="width: 70%;">Enable Device Response Outputs</label>
+  </div>
+
+  <div class="form-row node-input-outputResponses">
+    <label for="node-input-outputResponsesFilter"></label>
+    <input id="node-input-outputResponsesFilter" type="text" style="width: 70%">
+  </div>
+
+  <div class="form-row">
+    <label><i class="fa fa-sign-in"></i> Device Alert</label>
+    <input type="checkbox" id="node-input-outputDeviceAlerts" style="display: inline-block; width: auto; vertical-align: top;" />
+    <label for="node-input-outputDeviceAlerts" style="width: 70%;">Enable Device Alert Outputs</label>
+  </div>
+
+  <div class="form-row node-input-outputDeviceAlerts">
+    <label for="node-input-outputDeviceAlertsFilter"></label>
+    <input id="node-input-outputDeviceAlertsFilter" type="text" style="width: 70%">
+  </div>
+
+  <div class="form-row">
+    <label><i class="fa fa-sign-in"></i> DCC Alert</label>
+    <input type="checkbox" id="node-input-outputDCCAlerts" style="display: inline-block; width: auto; vertical-align: top;" />
+    <label for="node-input-outputDCCAlerts" style="width: 70%;">Enable DCC Alert Outputs</label>
+  </div>
+
+  <div class="form-row node-input-outputDCCAlerts">
+    <label for="node-input-outputDCCAlertsFilter"></label>
+    <input id="node-input-outputDCCAlertsFilter" type="text" style="width: 70%">
+  </div>
+
   <div class="form-row">
     <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
     <input type="text" id="node-input-name" placeholder="Name" />
