linted and prettified

--- a/src/dccboxed-config/dccboxed-config.html
+++ b/src/dccboxed-config/dccboxed-config.html
@@ -43,11 +43,18 @@
     to it.
   </div>
   <div class="form-row">
-    <label for="node-config-input-localKeyStore"><i class="fa fa-database"></i> Key Store</label>
-    <input type="text" id="node-input-localKeyStore" placeholder="/path/to/local/keystore.json"/>
+    <label for="node-config-input-localKeyStore"
+      ><i class="fa fa-database"></i> Key Store</label
+    >
+    <input
+      type="text"
+      id="node-input-localKeyStore"
+      placeholder="/path/to/local/keystore.json"
+    />
   </div>
   <div class="form-row form-tips">
-    If a local keystore is not provided, an ephemeral temporary file will be used.
+    If a local keystore is not provided, an ephemeral temporary file will be
+    used.
   </div>
   <div class="form-row">
     <label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
