--- a/src/duis-template/duis-template.html
+++ b/src/duis-template/duis-template.html
@@ -23,47 +23,94 @@
       ><i class="fa fa-tasks"></i> Template</label
     >
 
-    <input id="node-input-template" type="text" style="width: 70%">
-    <input id="node-input-templateValid" type="hidden">
+    <input id="node-input-template" type="text" style="width: 70%" />
+    <input id="node-input-templateValid" type="hidden" />
   </div>
 
   <div class="form-row duis-template-card">
-    <div id="duis-template-card-serviceRequestName">SRV:&nbsp;<span></span></div>
-    <div id="duis-template-card-serviceRequestName-variant" class="duis-template-card-toggle">Info:&nbsp;<span></span></div>
-    <div id="duis-template-card-serviceRequestName-critical" class="duis-template-card-toggle">Critical:&nbsp;<span></span></div>
-    <div id="duis-template-card-serviceRequestName-nondevice" class="duis-template-card-toggle">Non Device:&nbsp;<span></span></div>
-    <div id="duis-template-card-serviceRequestName-cv" class="duis-template-card-toggle">CV:&nbsp;<span></span></div>
-    <div id="duis-template-card-gbcsName" class="duis-template-card-toggle">GBCS:&nbsp;<span></span></div>
-    <div id="duis-template-card-gbcsName-variant" class="duis-template-card-toggle">Variant:&nbsp;<span></span></div>
+    <div id="duis-template-card-serviceRequestName">
+      SRV:&nbsp;<span></span>
+    </div>
+    <div
+      id="duis-template-card-serviceRequestName-variant"
+      class="duis-template-card-toggle"
+    >
+      Info:&nbsp;<span></span>
+    </div>
+    <div
+      id="duis-template-card-serviceRequestName-critical"
+      class="duis-template-card-toggle"
+    >
+      Critical:&nbsp;<span></span>
+    </div>
+    <div
+      id="duis-template-card-serviceRequestName-nondevice"
+      class="duis-template-card-toggle"
+    >
+      Non Device:&nbsp;<span></span>
+    </div>
+    <div
+      id="duis-template-card-serviceRequestName-cv"
+      class="duis-template-card-toggle"
+    >
+      CV:&nbsp;<span></span>
+    </div>
+    <div id="duis-template-card-gbcsName" class="duis-template-card-toggle">
+      GBCS:&nbsp;<span></span>
+    </div>
+    <div
+      id="duis-template-card-gbcsName-variant"
+      class="duis-template-card-toggle"
+    >
+      Variant:&nbsp;<span></span>
+    </div>
   </div>
 
   <div class="form-row">
     <label></label>
-    <input type="checkbox" id="node-input-minimal" style="display: inline-block; width: auto; vertical-align: top;" />
-    <label for="node-input-minimal" style="width: 70%;">Use Simplified Template (recommended)</label>
+    <input
+      type="checkbox"
+      id="node-input-minimal"
+      style="display: inline-block; width: auto; vertical-align: top;"
+    />
+    <label for="node-input-minimal" style="width: 70%;"
+      >Use Simplified Template (recommended)</label
+    >
   </div>
 
   <div class="form-row">
     <label></label>
-    <input type="checkbox" id="node-input-enableInject" style="display: inline-block; width: auto; vertical-align: top;" />
-    <label for="node-input-enableInject" style="width: 70%;">Show Inject Button</label>
+    <input
+      type="checkbox"
+      id="node-input-enableInject"
+      style="display: inline-block; width: auto; vertical-align: top;"
+    />
+    <label for="node-input-enableInject" style="width: 70%;"
+      >Show Inject Button</label
+    >
   </div>
 
   <div class="form-row">
-    <label for="node-input-output"><i class="fa fa-ellipsis-h"></i> Output</label>
-    <input id="node-input-output" type="text" style="width: 70%">
+    <label for="node-input-output"
+      ><i class="fa fa-ellipsis-h"></i> Output</label
+    >
+    <input id="node-input-output" type="text" style="width: 70%" />
   </div>
 
   <div class="form-row duis-template-optional">
-    <label for="node-input-originatorEUI"><i class="fa fa-ellipsis-h"></i> Originator</label>
-    <input id="node-input-originatorEUI" type="text" style="width: 70%">
-    <input id="node-input-originatorEUI_type" type="hidden">
+    <label for="node-input-originatorEUI"
+      ><i class="fa fa-ellipsis-h"></i> Originator</label
+    >
+    <input id="node-input-originatorEUI" type="text" style="width: 70%" />
+    <input id="node-input-originatorEUI_type" type="hidden" />
   </div>
 
   <div class="form-row duis-template-optional">
-    <label for="node-input-targetEUI"><i class="fa fa-ellipsis-h"></i> Target</label>
-    <input id="node-input-targetEUI" type="text" style="width: 70%">
-    <input id="node-input-targetEUI_type" type="hidden">
+    <label for="node-input-targetEUI"
+      ><i class="fa fa-ellipsis-h"></i> Target</label
+    >
+    <input id="node-input-targetEUI" type="text" style="width: 70%" />
+    <input id="node-input-targetEUI_type" type="hidden" />
   </div>
 
   <div class="form-row">
