--- a/src/gbcs-parser/gbcs-parser.html
+++ b/src/gbcs-parser/gbcs-parser.html
@@ -44,12 +44,14 @@
 
   <div class="form-row">
     <label for="node-input-input"><i class="fa fa-ellipsis-h"></i> Input</label>
-    <input id="node-input-input" type="text" style="width: 70%">
+    <input id="node-input-input" type="text" style="width: 70%" />
   </div>
 
   <div class="form-row">
-    <label for="node-input-output"><i class="fa fa-ellipsis-h"></i> Output</label>
-    <input id="node-input-output" type="text" style="width: 70%">
+    <label for="node-input-output"
+      ><i class="fa fa-ellipsis-h"></i> Output</label
+    >
+    <input id="node-input-output" type="text" style="width: 70%" />
   </div>
 
   <div class="form-row">
