--- a/src/gbcs-signer/gbcs-signer.html
+++ b/src/gbcs-signer/gbcs-signer.html
@@ -42,19 +42,25 @@
   </div>
 
   <div class="form-row">
-    <label for="node-input-precommand"><i class="fa fa-ellipsis-h"></i> Input</label>
-    <input id="node-input-precommand" type="text" style="width: 70%">
+    <label for="node-input-precommand"
+      ><i class="fa fa-ellipsis-h"></i> Input</label
+    >
+    <input id="node-input-precommand" type="text" style="width: 70%" />
   </div>
 
   <div class="form-row">
-    <label for="node-input-signedprecommand"><i class="fa fa-ellipsis-h"></i> Output</label>
-    <input id="node-input-signedprecommand" type="text" style="width: 70%">
+    <label for="node-input-signedprecommand"
+      ><i class="fa fa-ellipsis-h"></i> Output</label
+    >
+    <input id="node-input-signedprecommand" type="text" style="width: 70%" />
   </div>
 
   <div class="form-row">
-    <label for="node-input-signerEUI"><i class="fa fa-ellipsis-h"></i> Signer</label>
-    <input id="node-input-signerEUI" type="text" style="width: 70%">
-    <input id="node-input-signerEUI_type" type="hidden">
+    <label for="node-input-signerEUI"
+      ><i class="fa fa-ellipsis-h"></i> Signer</label
+    >
+    <input id="node-input-signerEUI" type="text" style="width: 70%" />
+    <input id="node-input-signerEUI_type" type="hidden" />
   </div>
 
   <div class="form-row">
