--- a/src/duis-construct/duis-construct.html
+++ b/src/duis-construct/duis-construct.html
@@ -20,18 +20,26 @@
 <script type="text/html" data-template-name="duis-construct">
   <div class="form-row">
     <label></label>
-    <input type="checkbox" id="node-input-minimal" style="display: inline-block; width: auto; vertical-align: top;" />
-    <label for="node-input-minimal" style="width: 70%;">Simplified Template</label>
+    <input
+      type="checkbox"
+      id="node-input-minimal"
+      style="display: inline-block; width: auto; vertical-align: top;"
+    />
+    <label for="node-input-minimal" style="width: 70%;"
+      >Simplified Template</label
+    >
   </div>
 
   <div class="form-row">
     <label for="node-input-input"><i class="fa fa-ellipsis-h"></i> Input</label>
-    <input id="node-input-input" type="text" style="width: 70%">
+    <input id="node-input-input" type="text" style="width: 70%" />
   </div>
 
   <div class="form-row">
-    <label for="node-input-output"><i class="fa fa-ellipsis-h"></i> Output</label>
-    <input id="node-input-output" type="text" style="width: 70%">
+    <label for="node-input-output"
+      ><i class="fa fa-ellipsis-h"></i> Output</label
+    >
+    <input id="node-input-output" type="text" style="width: 70%" />
   </div>
 
   <div class="form-row">
