--- a/src/dccboxed-receive/dccboxed-receive.html
+++ b/src/dccboxed-receive/dccboxed-receive.html
@@ -68,6 +68,18 @@
   </div>
 
   <div class="form-row">
+    <label></label>
+    <input
+      type="checkbox"
+      id="node-input-notifyDeviceAlerts"
+      style="display: inline-block; width: auto; vertical-align: top;"
+    />
+    <label for="node-input-notifyDeviceAlerts" style="width: 70%;"
+      >UI notification on device alert</label
+    >
+  </div>
+
+  <div class="form-row">
     <label for="node-input-outputDCCAlertsFilter"
       ><i class="fa fa-sign-in"></i> DCC Alert</label
     >
