--- a/src/gbcs-utrn/gbcs-utrn.html
+++ b/src/gbcs-utrn/gbcs-utrn.html
@@ -75,6 +75,11 @@
     <input id="node-input-counter_type" type="hidden" />
   </div>
 
+  <div id="effective-counter-row" class="form-row hidden">
+    <label for="node-info-effective-counter"></label>
+    <span id="node-info-effective-counter" style="width: 70%"></span>
+  </div>
+
   <div class="form-row">
     <label for="node-input-value"><i class="fa fa-money"></i> PTUT Value</label>
     <input id="node-input-value" type="text" style="width: 70%" />
