feat: add single rate tariff

--- a/src/duis-tariff/duis-tariff.html
+++ b/src/duis-tariff/duis-tariff.html
@@ -69,6 +69,31 @@
     </div>
   </div>
 
+  <div class="form-row duis-tariff-simple">
+    <label for="node-input-kwhrate"><i class="fa fa-gbp"></i> p/kWh</label>
+    <input
+      type="number"
+      min="0"
+      max="200"
+      id="node-input-kwhrate"
+      placeholder="p/kWh"
+    />
+  </div>
+
+  <div class="form-row duis-tariff-simple">
+    <label for="node-input-standingcharge"
+      ><i class="fa fa-gbp"></i> p/day</label
+    >
+    <input
+      type="number"
+      type="number"
+      min="0"
+      max="200"
+      id="node-input-standingcharge"
+      placeholder="Standing Charge"
+    />
+  </div>
+
   <div class="form-row">
     <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
     <input type="text" id="node-input-name" placeholder="Name" />
