--- a/src/gbcs-parser/gbcs-parser.html
+++ b/src/gbcs-parser/gbcs-parser.html
@@ -43,6 +43,11 @@
   </div>
 
   <div class="form-row">
+    <label for="node-input-acbEui"><i class="fa fa-tag"></i> ACB EUI</label>
+    <input id="node-input-acbEui" type="text" style="width: 70%" />
+  </div>
+
+  <div class="form-row">
     <label for="node-input-input"><i class="fa fa-ellipsis-h"></i> Input</label>
     <input id="node-input-input" type="text" style="width: 70%" />
   </div>
